--- a/src/ContentBenchmarks/Benchmarks.Kni.BlazorGL/wwwroot/index.html
+++ b/src/ContentBenchmarks/Benchmarks.Kni.BlazorGL/wwwroot/index.html
@@ -14,7 +14,11 @@
 <body>
 
     <div id="app">
-        <div style="margin: 1em; font-size: 2em; font-family: 'Segoe UI', sans-serif;">Loading...</div>
+        <div id="loading" style="display: table-cell; margin: auto; width:100vw; height:100vh; vertical-align: middle; background: #ffcc10;">
+            <div style="display: block; margin: auto; width: 9em; color: white;font-family: 'Segoe UI', sans-serif;">
+            <div style="text-align: center; font-size: 0.85em;">Made with<br/><a href="https://github.com/kniEngine/kni"><img src="kni.png" border="0" alt="Kni"></a></div>
+            <div style="text-align: center; font-size: 1.8em;">loading&nbsp;<marquee style="width:0.9em; vertical-align: bottom;">.&nbsp;.&nbsp;.&nbsp;&nbsp;&nbsp;</marquee></div>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
@@ -26,10 +30,13 @@
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script type="module">
         import { BrotliDecode } from './js/decode.min.js';
+        // Set this to enable Brotli (.br) decompression on static webServers
+        // that don't support content compression and http://.
+        var enableBrotliDecompression = false;
         Blazor.start({
             loadBootResource: function (type, name, defaultUri, integrity)
             {
-                if (type !== 'dotnetjs' && location.hostname !== 'localhost')
+                if (enableBrotliDecompression === true && type !== 'dotnetjs' && location.hostname !== 'localhost')
                 {
                     return (async function()
                     {
@@ -38,12 +45,12 @@
                             throw new Error(response.statusText);
                         const originalResponseBuffer = await response.arrayBuffer();
                         const originalResponseArray = new Int8Array(originalResponseBuffer);
-                        const decompressedResponseArray = BrotliDecode(originalResponseArray);
-                        const contentType = type === 'dotnetwasm'
-                                          ? 'application/wasm' 
+                        const contentType = (type === 'dotnetwasm')
+                                          ? 'application/wasm'
                                           : 'application/octet-stream';
+                        const decompressedResponseArray = BrotliDecode(originalResponseArray);
                         return new Response(decompressedResponseArray,
-                                            { headers: { 'content-type': contentType } 
+                                            { headers: { 'content-type': contentType }
                                    });
                     })();
                 }
@@ -51,13 +58,14 @@
         });
     </script>
 
-    <script src="_content/nkast.Wasm.Dom/js/JSObject.6.0.2.js"></script>
-    <script src="_content/nkast.Wasm.Dom/js/Window.6.0.2.js"></script>
-    <script src="_content/nkast.Wasm.Dom/js/Document.6.0.2.js"></script>
-    <script src="_content/nkast.Wasm.XHR/js/XHR.6.0.2.js"></script>
-    <script src="_content/nkast.Wasm.Canvas/js/Canvas.6.0.2.js"></script>
-    <script src="_content/nkast.Wasm.Canvas/js/CanvasGLContext.6.0.2.js"></script>
-    <script src="_content/nkast.Wasm.Audio/js/Audio.6.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/JSObject.6.0.5.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Window.6.0.5.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Document.6.0.5.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Media.6.0.5.js"></script>
+    <script src="_content/nkast.Wasm.XHR/js/XHR.6.0.5.js"></script>
+    <script src="_content/nkast.Wasm.Canvas/js/Canvas.6.0.5.js"></script>
+    <script src="_content/nkast.Wasm.Canvas/js/CanvasGLContext.6.0.5.js"></script>
+    <script src="_content/nkast.Wasm.Audio/js/Audio.6.0.5.js"></script>
 
     <script>
         function tickJS()
