--- a/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/wwwroot/index.html
+++ b/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/wwwroot/index.html
@@ -16,15 +16,16 @@
     <div id="app">
         <div id="loading" style="display: table-cell; margin: auto; width:100vw; height:100vh; vertical-align: middle; background: #ffcc10;">
             <div style="display: block; margin: auto; width: 9em; color: white;font-family: 'Segoe UI', sans-serif;">
-            <div style="text-align: center; font-size: 0.85em;">Made with<br/><a href="https://github.com/kniEngine/kni"><img src="kni.png" border="0" alt="Kni"></a></div>
-            <div style="text-align: center; font-size: 1.8em;">loading&nbsp;<marquee style="width:0.9em; vertical-align: bottom;">.&nbsp;.&nbsp;.&nbsp;&nbsp;&nbsp;</marquee></div>
+                <div style="text-align: center; font-size: 0.85em;">Made with<br/><a href="https://github.com/kniEngine/kni"><img src="kni.png" border="0" alt="Kni"></a></div>
+                <div style="text-align: center; font-size: 1.8em;">loading&nbsp;<marquee style="width:0.9em; vertical-align: bottom;">.&nbsp;.&nbsp;.&nbsp;&nbsp;&nbsp;</marquee></div>
+            </div>
         </div>
     </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
-        <a class="dismiss">?</a>
+        <a class="dismiss">x</a>
     </div>
 
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
@@ -58,16 +59,16 @@
         });
     </script>
 
-    <script src="_content/nkast.Wasm.Dom/js/JSObject.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Dom/js/Window.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Dom/js/Document.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Dom/js/Navigator.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Dom/js/Gamepad.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Dom/js/Media.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.XHR/js/XHR.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Canvas/js/Canvas.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Canvas/js/CanvasGLContext.8.0.1.js"></script>
-    <script src="_content/nkast.Wasm.Audio/js/Audio.8.0.1.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/JSObject.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Window.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Document.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Navigator.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Gamepad.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Dom/js/Media.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.XHR/js/XHR.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Canvas/js/Canvas.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Canvas/js/CanvasGLContext.8.0.2.js"></script>
+    <script src="_content/nkast.Wasm.Audio/js/Audio.8.0.2.js"></script>
 
     <script>
         function tickJS()
